src/main/java/com/uni/compiler/parser/y.output
   0  $accept : programa $end

   1  programa : declaraciones sentencias

   2  declaraciones : declaraciones declaracion
   3                | declaracion

   4  declaracion : variables
   5              | funcion

   6  variables : INT conjVariables ';'
   7            | INT conjVariables error

   8  conjVariables : conjVariables ',' ID
   9                | ID

  10  $$1 :

  11  funcion : FUNCTION ID $$1 bloqueFuncion

  12  bloqueFuncion : BEGIN declaracionFuncion sentenciasF END
  13                | BEGIN END
  14                | declaracionFuncion sentenciasF END
  15                | BEGIN declaracionFuncion sentenciasF error

  16  declaracionFuncion : variables
  17                     | IMPORT conjVariables ';'

  18  sentenciasF : sentenciasF sentenciaF
  19              | sentenciaF
  20              | ';'

  21  sentenciaF : asignacion ';'
  22             | impresion
  23             | returnF ';'
  24             | seleccionF
  25             | iteracionF

  26  returnF : RETURN '(' exprAritmetica ')'
  27          | RETURN '(' ')'
  28          | RETURN error
  29          | RETURN '(' error
  30          | RETURN '(' exprAritmetica error

  31  seleccionF : IF condicion THEN sentenciaSeleccionF

  32  $$2 :

  33  seleccionF : IF condicion THEN sentenciaSeleccionF ELSE $$2 sentenciaSeleccionF
  34             | IF condicion sentenciaSeleccionF

  35  sentenciaSeleccionF : BEGIN sentenciasF END
  36                      | sentenciaF

  37  $$3 :

  38  iteracionF : LOOP $$3 sentenciasF UNTIL condicion
  39             | LOOP UNTIL condicion

  40  sentencias : sentencias sentencia
  41             | sentencia
  42             | ';'

  43  sentencia : asignacion ';'
  44            | impresion
  45            | seleccion
  46            | iteracion
  47            | llamadaAFuncion
  48            | error

  49  asignacion : ID '=' exprAritmetica
  50             | '=' exprAritmetica
  51             | ID '=' error
  52             | ID exprAritmetica

  53  exprAritmetica : exprAritmetica '+' termino
  54                 | exprAritmetica '-' termino
  55                 | termino
  56                 | exprAritmetica '+' error
  57                 | '+' termino
  58                 | exprAritmetica '-' error
  59                 | '-' termino

  60  termino : termino '*' factor
  61          | termino '/' factor
  62          | factor
  63          | termino '*' error
  64          | '*' factor
  65          | termino '/' error
  66          | '/' factor

  67  factor : ID
  68         | CTEINT

  69  impresion : PRINT '(' STRING ')' ';'
  70            | PRINT '(' STRING ')' error
  71            | PRINT '(' STRING error
  72            | PRINT STRING ')'
  73            | PRINT '(' ')'
  74            | PRINT STRING
  75            | PRINT '('
  76            | PRINT ')'
  77            | PRINT

  78  seleccion : IF condicion THEN sentenciaSeleccion

  79  $$4 :

  80  seleccion : IF condicion THEN sentenciaSeleccion ELSE $$4 sentenciaSeleccion
  81            | IF condicion error

  82  condicion : '(' exprAritmetica opLogico exprAritmetica ')'
  83            | exprAritmetica opLogico exprAritmetica ')'
  84            | '(' exprAritmetica opLogico exprAritmetica error
  85            | '(' opLogico exprAritmetica ')'
  86            | '(' exprAritmetica opLogico ')'

  87  opLogico : '<'
  88           | MENORIGUAL
  89           | '>'
  90           | MAYORIGUAL
  91           | IGUAL
  92           | DISTINTO

  93  sentenciaSeleccion : BEGIN sentencias END
  94                     | sentencia

  95  $$5 :

  96  iteracion : LOOP $$5 sentencias UNTIL condicion
  97            | LOOP UNTIL condicion

  98  llamadaAFuncion : ID '(' ')'

state 0
	$accept : . programa $end  (0)

	INT  shift 1
	FUNCTION  shift 2
	.  error

	programa  goto 3
	declaraciones  goto 4
	declaracion  goto 5
	variables  goto 6
	funcion  goto 7


state 1
	variables : INT . conjVariables ';'  (6)
	variables : INT . conjVariables error  (7)

	ID  shift 8
	.  error

	conjVariables  goto 9


state 2
	funcion : FUNCTION . ID $$1 bloqueFuncion  (11)

	ID  shift 10
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : declaraciones . sentencias  (1)
	declaraciones : declaraciones . declaracion  (2)

	error  shift 11
	ID  shift 12
	INT  shift 1
	IF  shift 13
	LOOP  shift 14
	PRINT  shift 15
	FUNCTION  shift 2
	';'  shift 16
	'='  shift 17
	.  error

	sentencias  goto 18
	declaracion  goto 19
	variables  goto 6
	funcion  goto 7
	asignacion  goto 20
	impresion  goto 21
	sentencia  goto 22
	seleccion  goto 23
	iteracion  goto 24
	llamadaAFuncion  goto 25


state 5
	declaraciones : declaracion .  (3)

	.  reduce 3


state 6
	declaracion : variables .  (4)

	.  reduce 4


state 7
	declaracion : funcion .  (5)

	.  reduce 5


state 8
	conjVariables : ID .  (9)

	.  reduce 9


state 9
	variables : INT conjVariables . ';'  (6)
	variables : INT conjVariables . error  (7)
	conjVariables : conjVariables . ',' ID  (8)

	error  shift 26
	';'  shift 27
	','  shift 28
	.  error


state 10
	funcion : FUNCTION ID . $$1 bloqueFuncion  (11)
	$$1 : .  (10)

	.  reduce 10

	$$1  goto 29


state 11
	sentencia : error .  (48)

	.  reduce 48


state 12
	asignacion : ID . '=' exprAritmetica  (49)
	asignacion : ID . '=' error  (51)
	asignacion : ID . exprAritmetica  (52)
	llamadaAFuncion : ID . '(' ')'  (98)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'('  shift 36
	'='  shift 37
	.  error

	exprAritmetica  goto 38
	termino  goto 39
	factor  goto 40


state 13
	seleccion : IF . condicion THEN sentenciaSeleccion  (78)
	seleccion : IF . condicion THEN sentenciaSeleccion ELSE $$4 sentenciaSeleccion  (80)
	seleccion : IF . condicion error  (81)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'('  shift 41
	.  error

	exprAritmetica  goto 42
	condicion  goto 43
	termino  goto 39
	factor  goto 40


state 14
	iteracion : LOOP . $$5 sentencias UNTIL condicion  (96)
	iteracion : LOOP . UNTIL condicion  (97)
	$$5 : .  (95)

	UNTIL  shift 44
	error  reduce 95
	ID  reduce 95
	IF  reduce 95
	LOOP  reduce 95
	PRINT  reduce 95
	';'  reduce 95
	'='  reduce 95

	$$5  goto 45


state 15
	impresion : PRINT . '(' STRING ')' ';'  (69)
	impresion : PRINT . '(' STRING ')' error  (70)
	impresion : PRINT . '(' STRING error  (71)
	impresion : PRINT . STRING ')'  (72)
	impresion : PRINT . '(' ')'  (73)
	impresion : PRINT . STRING  (74)
	impresion : PRINT . '('  (75)
	impresion : PRINT . ')'  (76)
	impresion : PRINT .  (77)

	STRING  shift 46
	'('  shift 47
	')'  shift 48
	$end  reduce 77
	error  reduce 77
	ID  reduce 77
	IF  reduce 77
	ELSE  reduce 77
	END  reduce 77
	LOOP  reduce 77
	UNTIL  reduce 77
	PRINT  reduce 77
	RETURN  reduce 77
	'='  reduce 77


state 16
	sentencias : ';' .  (42)

	.  reduce 42


state 17
	asignacion : '=' . exprAritmetica  (50)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	.  error

	exprAritmetica  goto 49
	termino  goto 39
	factor  goto 40


state 18
	programa : declaraciones sentencias .  (1)
	sentencias : sentencias . sentencia  (40)

	error  shift 11
	ID  shift 12
	IF  shift 13
	LOOP  shift 14
	PRINT  shift 15
	'='  shift 17
	$end  reduce 1

	asignacion  goto 20
	impresion  goto 21
	sentencia  goto 50
	seleccion  goto 23
	iteracion  goto 24
	llamadaAFuncion  goto 25


state 19
	declaraciones : declaraciones declaracion .  (2)

	.  reduce 2


state 20
	sentencia : asignacion . ';'  (43)

	';'  shift 51
	.  error


state 21
	sentencia : impresion .  (44)

	.  reduce 44


state 22
	sentencias : sentencia .  (41)

	.  reduce 41


state 23
	sentencia : seleccion .  (45)

	.  reduce 45


state 24
	sentencia : iteracion .  (46)

	.  reduce 46


state 25
	sentencia : llamadaAFuncion .  (47)

	.  reduce 47


state 26
	variables : INT conjVariables error .  (7)

	.  reduce 7


state 27
	variables : INT conjVariables ';' .  (6)

	.  reduce 6


state 28
	conjVariables : conjVariables ',' . ID  (8)

	ID  shift 52
	.  error


state 29
	funcion : FUNCTION ID $$1 . bloqueFuncion  (11)

	INT  shift 1
	BEGIN  shift 53
	IMPORT  shift 54
	.  error

	variables  goto 55
	bloqueFuncion  goto 56
	declaracionFuncion  goto 57


state 30
	factor : ID .  (67)

	.  reduce 67


state 31
	factor : CTEINT .  (68)

	.  reduce 68


state 32
	exprAritmetica : '+' . termino  (57)

	ID  shift 30
	CTEINT  shift 31
	'*'  shift 34
	'/'  shift 35
	.  error

	termino  goto 58
	factor  goto 40


state 33
	exprAritmetica : '-' . termino  (59)

	ID  shift 30
	CTEINT  shift 31
	'*'  shift 34
	'/'  shift 35
	.  error

	termino  goto 59
	factor  goto 40


state 34
	termino : '*' . factor  (64)

	ID  shift 30
	CTEINT  shift 31
	.  error

	factor  goto 60


state 35
	termino : '/' . factor  (66)

	ID  shift 30
	CTEINT  shift 31
	.  error

	factor  goto 61


state 36
	llamadaAFuncion : ID '(' . ')'  (98)

	')'  shift 62
	.  error


state 37
	asignacion : ID '=' . exprAritmetica  (49)
	asignacion : ID '=' . error  (51)

	error  shift 63
	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	.  error

	exprAritmetica  goto 64
	termino  goto 39
	factor  goto 40


state 38
	asignacion : ID exprAritmetica .  (52)
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)

	'+'  shift 65
	'-'  shift 66
	';'  reduce 52


state 39
	exprAritmetica : termino .  (55)
	termino : termino . '*' factor  (60)
	termino : termino . '/' factor  (61)
	termino : termino . '*' error  (63)
	termino : termino . '/' error  (65)

	'*'  shift 67
	'/'  shift 68
	error  reduce 55
	MENORIGUAL  reduce 55
	MAYORIGUAL  reduce 55
	IGUAL  reduce 55
	DISTINTO  reduce 55
	';'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	')'  reduce 55
	'<'  reduce 55
	'>'  reduce 55


state 40
	termino : factor .  (62)

	.  reduce 62


state 41
	condicion : '(' . exprAritmetica opLogico exprAritmetica ')'  (82)
	condicion : '(' . exprAritmetica opLogico exprAritmetica error  (84)
	condicion : '(' . opLogico exprAritmetica ')'  (85)
	condicion : '(' . exprAritmetica opLogico ')'  (86)

	ID  shift 30
	CTEINT  shift 31
	MENORIGUAL  shift 69
	MAYORIGUAL  shift 70
	IGUAL  shift 71
	DISTINTO  shift 72
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'<'  shift 73
	'>'  shift 74
	.  error

	exprAritmetica  goto 75
	termino  goto 39
	factor  goto 40
	opLogico  goto 76


state 42
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)
	condicion : exprAritmetica . opLogico exprAritmetica ')'  (83)

	MENORIGUAL  shift 69
	MAYORIGUAL  shift 70
	IGUAL  shift 71
	DISTINTO  shift 72
	'+'  shift 65
	'-'  shift 66
	'<'  shift 73
	'>'  shift 74
	.  error

	opLogico  goto 77


state 43
	seleccion : IF condicion . THEN sentenciaSeleccion  (78)
	seleccion : IF condicion . THEN sentenciaSeleccion ELSE $$4 sentenciaSeleccion  (80)
	seleccion : IF condicion . error  (81)

	error  shift 78
	THEN  shift 79
	.  error


state 44
	iteracion : LOOP UNTIL . condicion  (97)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'('  shift 41
	.  error

	exprAritmetica  goto 42
	condicion  goto 80
	termino  goto 39
	factor  goto 40


state 45
	iteracion : LOOP $$5 . sentencias UNTIL condicion  (96)

	error  shift 11
	ID  shift 12
	IF  shift 13
	LOOP  shift 14
	PRINT  shift 15
	';'  shift 16
	'='  shift 17
	.  error

	sentencias  goto 81
	asignacion  goto 20
	impresion  goto 21
	sentencia  goto 22
	seleccion  goto 23
	iteracion  goto 24
	llamadaAFuncion  goto 25


state 46
	impresion : PRINT STRING . ')'  (72)
	impresion : PRINT STRING .  (74)

	')'  shift 82
	$end  reduce 74
	error  reduce 74
	ID  reduce 74
	IF  reduce 74
	ELSE  reduce 74
	END  reduce 74
	LOOP  reduce 74
	UNTIL  reduce 74
	PRINT  reduce 74
	RETURN  reduce 74
	'='  reduce 74


state 47
	impresion : PRINT '(' . STRING ')' ';'  (69)
	impresion : PRINT '(' . STRING ')' error  (70)
	impresion : PRINT '(' . STRING error  (71)
	impresion : PRINT '(' . ')'  (73)
	impresion : PRINT '(' .  (75)

	STRING  shift 83
	')'  shift 84
	$end  reduce 75
	error  reduce 75
	ID  reduce 75
	IF  reduce 75
	ELSE  reduce 75
	END  reduce 75
	LOOP  reduce 75
	UNTIL  reduce 75
	PRINT  reduce 75
	RETURN  reduce 75
	'='  reduce 75


state 48
	impresion : PRINT ')' .  (76)

	.  reduce 76


state 49
	asignacion : '=' exprAritmetica .  (50)
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)

	'+'  shift 65
	'-'  shift 66
	';'  reduce 50


state 50
	sentencias : sentencias sentencia .  (40)

	.  reduce 40


state 51
	sentencia : asignacion ';' .  (43)

	.  reduce 43


state 52
	conjVariables : conjVariables ',' ID .  (8)

	.  reduce 8


state 53
	bloqueFuncion : BEGIN . declaracionFuncion sentenciasF END  (12)
	bloqueFuncion : BEGIN . END  (13)
	bloqueFuncion : BEGIN . declaracionFuncion sentenciasF error  (15)

	INT  shift 1
	END  shift 85
	IMPORT  shift 54
	.  error

	variables  goto 55
	declaracionFuncion  goto 86


state 54
	declaracionFuncion : IMPORT . conjVariables ';'  (17)

	ID  shift 8
	.  error

	conjVariables  goto 87


state 55
	declaracionFuncion : variables .  (16)

	.  reduce 16


state 56
	funcion : FUNCTION ID $$1 bloqueFuncion .  (11)

	.  reduce 11


state 57
	bloqueFuncion : declaracionFuncion . sentenciasF END  (14)

	ID  shift 88
	IF  shift 89
	LOOP  shift 90
	PRINT  shift 15
	RETURN  shift 91
	';'  shift 92
	'='  shift 17
	.  error

	sentenciasF  goto 93
	sentenciaF  goto 94
	asignacion  goto 95
	impresion  goto 96
	returnF  goto 97
	seleccionF  goto 98
	iteracionF  goto 99


state 58
	exprAritmetica : '+' termino .  (57)
	termino : termino . '*' factor  (60)
	termino : termino . '/' factor  (61)
	termino : termino . '*' error  (63)
	termino : termino . '/' error  (65)

	'*'  shift 67
	'/'  shift 68
	error  reduce 57
	MENORIGUAL  reduce 57
	MAYORIGUAL  reduce 57
	IGUAL  reduce 57
	DISTINTO  reduce 57
	';'  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	')'  reduce 57
	'<'  reduce 57
	'>'  reduce 57


state 59
	exprAritmetica : '-' termino .  (59)
	termino : termino . '*' factor  (60)
	termino : termino . '/' factor  (61)
	termino : termino . '*' error  (63)
	termino : termino . '/' error  (65)

	'*'  shift 67
	'/'  shift 68
	error  reduce 59
	MENORIGUAL  reduce 59
	MAYORIGUAL  reduce 59
	IGUAL  reduce 59
	DISTINTO  reduce 59
	';'  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	')'  reduce 59
	'<'  reduce 59
	'>'  reduce 59


state 60
	termino : '*' factor .  (64)

	.  reduce 64


state 61
	termino : '/' factor .  (66)

	.  reduce 66


state 62
	llamadaAFuncion : ID '(' ')' .  (98)

	.  reduce 98


state 63
	asignacion : ID '=' error .  (51)

	.  reduce 51


state 64
	asignacion : ID '=' exprAritmetica .  (49)
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)

	'+'  shift 65
	'-'  shift 66
	';'  reduce 49


state 65
	exprAritmetica : exprAritmetica '+' . termino  (53)
	exprAritmetica : exprAritmetica '+' . error  (56)

	error  shift 100
	ID  shift 30
	CTEINT  shift 31
	'*'  shift 34
	'/'  shift 35
	.  error

	termino  goto 101
	factor  goto 40


state 66
	exprAritmetica : exprAritmetica '-' . termino  (54)
	exprAritmetica : exprAritmetica '-' . error  (58)

	error  shift 102
	ID  shift 30
	CTEINT  shift 31
	'*'  shift 34
	'/'  shift 35
	.  error

	termino  goto 103
	factor  goto 40


state 67
	termino : termino '*' . factor  (60)
	termino : termino '*' . error  (63)

	error  shift 104
	ID  shift 30
	CTEINT  shift 31
	.  error

	factor  goto 105


state 68
	termino : termino '/' . factor  (61)
	termino : termino '/' . error  (65)

	error  shift 106
	ID  shift 30
	CTEINT  shift 31
	.  error

	factor  goto 107


state 69
	opLogico : MENORIGUAL .  (88)

	.  reduce 88


state 70
	opLogico : MAYORIGUAL .  (90)

	.  reduce 90


state 71
	opLogico : IGUAL .  (91)

	.  reduce 91


state 72
	opLogico : DISTINTO .  (92)

	.  reduce 92


state 73
	opLogico : '<' .  (87)

	.  reduce 87


state 74
	opLogico : '>' .  (89)

	.  reduce 89


state 75
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)
	condicion : '(' exprAritmetica . opLogico exprAritmetica ')'  (82)
	condicion : '(' exprAritmetica . opLogico exprAritmetica error  (84)
	condicion : '(' exprAritmetica . opLogico ')'  (86)

	MENORIGUAL  shift 69
	MAYORIGUAL  shift 70
	IGUAL  shift 71
	DISTINTO  shift 72
	'+'  shift 65
	'-'  shift 66
	'<'  shift 73
	'>'  shift 74
	.  error

	opLogico  goto 108


state 76
	condicion : '(' opLogico . exprAritmetica ')'  (85)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	.  error

	exprAritmetica  goto 109
	termino  goto 39
	factor  goto 40


state 77
	condicion : exprAritmetica opLogico . exprAritmetica ')'  (83)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	.  error

	exprAritmetica  goto 110
	termino  goto 39
	factor  goto 40


state 78
	seleccion : IF condicion error .  (81)

	.  reduce 81


state 79
	seleccion : IF condicion THEN . sentenciaSeleccion  (78)
	seleccion : IF condicion THEN . sentenciaSeleccion ELSE $$4 sentenciaSeleccion  (80)

	error  shift 11
	ID  shift 12
	IF  shift 13
	BEGIN  shift 111
	LOOP  shift 14
	PRINT  shift 15
	'='  shift 17
	.  error

	asignacion  goto 20
	impresion  goto 21
	sentencia  goto 112
	seleccion  goto 23
	iteracion  goto 24
	llamadaAFuncion  goto 25
	sentenciaSeleccion  goto 113


state 80
	iteracion : LOOP UNTIL condicion .  (97)

	.  reduce 97


state 81
	sentencias : sentencias . sentencia  (40)
	iteracion : LOOP $$5 sentencias . UNTIL condicion  (96)

	error  shift 11
	ID  shift 12
	IF  shift 13
	LOOP  shift 14
	UNTIL  shift 114
	PRINT  shift 15
	'='  shift 17
	.  error

	asignacion  goto 20
	impresion  goto 21
	sentencia  goto 50
	seleccion  goto 23
	iteracion  goto 24
	llamadaAFuncion  goto 25


state 82
	impresion : PRINT STRING ')' .  (72)

	.  reduce 72


state 83
	impresion : PRINT '(' STRING . ')' ';'  (69)
	impresion : PRINT '(' STRING . ')' error  (70)
	impresion : PRINT '(' STRING . error  (71)

	error  shift 115
	')'  shift 116
	.  error


state 84
	impresion : PRINT '(' ')' .  (73)

	.  reduce 73


state 85
	bloqueFuncion : BEGIN END .  (13)

	.  reduce 13


state 86
	bloqueFuncion : BEGIN declaracionFuncion . sentenciasF END  (12)
	bloqueFuncion : BEGIN declaracionFuncion . sentenciasF error  (15)

	ID  shift 88
	IF  shift 89
	LOOP  shift 90
	PRINT  shift 15
	RETURN  shift 91
	';'  shift 92
	'='  shift 17
	.  error

	sentenciasF  goto 117
	sentenciaF  goto 94
	asignacion  goto 95
	impresion  goto 96
	returnF  goto 97
	seleccionF  goto 98
	iteracionF  goto 99


state 87
	conjVariables : conjVariables . ',' ID  (8)
	declaracionFuncion : IMPORT conjVariables . ';'  (17)

	';'  shift 118
	','  shift 28
	.  error


state 88
	asignacion : ID . '=' exprAritmetica  (49)
	asignacion : ID . '=' error  (51)
	asignacion : ID . exprAritmetica  (52)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'='  shift 37
	.  error

	exprAritmetica  goto 38
	termino  goto 39
	factor  goto 40


state 89
	seleccionF : IF . condicion THEN sentenciaSeleccionF  (31)
	seleccionF : IF . condicion THEN sentenciaSeleccionF ELSE $$2 sentenciaSeleccionF  (33)
	seleccionF : IF . condicion sentenciaSeleccionF  (34)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'('  shift 41
	.  error

	exprAritmetica  goto 42
	condicion  goto 119
	termino  goto 39
	factor  goto 40


state 90
	iteracionF : LOOP . $$3 sentenciasF UNTIL condicion  (38)
	iteracionF : LOOP . UNTIL condicion  (39)
	$$3 : .  (37)

	UNTIL  shift 120
	ID  reduce 37
	IF  reduce 37
	LOOP  reduce 37
	PRINT  reduce 37
	RETURN  reduce 37
	';'  reduce 37
	'='  reduce 37

	$$3  goto 121


state 91
	returnF : RETURN . '(' exprAritmetica ')'  (26)
	returnF : RETURN . '(' ')'  (27)
	returnF : RETURN . error  (28)
	returnF : RETURN . '(' error  (29)
	returnF : RETURN . '(' exprAritmetica error  (30)

	error  shift 122
	'('  shift 123
	.  error


state 92
	sentenciasF : ';' .  (20)

	.  reduce 20


state 93
	bloqueFuncion : declaracionFuncion sentenciasF . END  (14)
	sentenciasF : sentenciasF . sentenciaF  (18)

	ID  shift 88
	IF  shift 89
	END  shift 124
	LOOP  shift 90
	PRINT  shift 15
	RETURN  shift 91
	'='  shift 17
	.  error

	sentenciaF  goto 125
	asignacion  goto 95
	impresion  goto 96
	returnF  goto 97
	seleccionF  goto 98
	iteracionF  goto 99


state 94
	sentenciasF : sentenciaF .  (19)

	.  reduce 19


state 95
	sentenciaF : asignacion . ';'  (21)

	';'  shift 126
	.  error


state 96
	sentenciaF : impresion .  (22)

	.  reduce 22


state 97
	sentenciaF : returnF . ';'  (23)

	';'  shift 127
	.  error


state 98
	sentenciaF : seleccionF .  (24)

	.  reduce 24


state 99
	sentenciaF : iteracionF .  (25)

	.  reduce 25


state 100
	exprAritmetica : exprAritmetica '+' error .  (56)

	.  reduce 56


state 101
	exprAritmetica : exprAritmetica '+' termino .  (53)
	termino : termino . '*' factor  (60)
	termino : termino . '/' factor  (61)
	termino : termino . '*' error  (63)
	termino : termino . '/' error  (65)

	'*'  shift 67
	'/'  shift 68
	error  reduce 53
	MENORIGUAL  reduce 53
	MAYORIGUAL  reduce 53
	IGUAL  reduce 53
	DISTINTO  reduce 53
	';'  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	')'  reduce 53
	'<'  reduce 53
	'>'  reduce 53


state 102
	exprAritmetica : exprAritmetica '-' error .  (58)

	.  reduce 58


state 103
	exprAritmetica : exprAritmetica '-' termino .  (54)
	termino : termino . '*' factor  (60)
	termino : termino . '/' factor  (61)
	termino : termino . '*' error  (63)
	termino : termino . '/' error  (65)

	'*'  shift 67
	'/'  shift 68
	error  reduce 54
	MENORIGUAL  reduce 54
	MAYORIGUAL  reduce 54
	IGUAL  reduce 54
	DISTINTO  reduce 54
	';'  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	')'  reduce 54
	'<'  reduce 54
	'>'  reduce 54


state 104
	termino : termino '*' error .  (63)

	.  reduce 63


state 105
	termino : termino '*' factor .  (60)

	.  reduce 60


state 106
	termino : termino '/' error .  (65)

	.  reduce 65


state 107
	termino : termino '/' factor .  (61)

	.  reduce 61


state 108
	condicion : '(' exprAritmetica opLogico . exprAritmetica ')'  (82)
	condicion : '(' exprAritmetica opLogico . exprAritmetica error  (84)
	condicion : '(' exprAritmetica opLogico . ')'  (86)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	')'  shift 128
	.  error

	exprAritmetica  goto 129
	termino  goto 39
	factor  goto 40


state 109
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)
	condicion : '(' opLogico exprAritmetica . ')'  (85)

	'+'  shift 65
	'-'  shift 66
	')'  shift 130
	.  error


state 110
	exprAritmetica : exprAritmetica . '+' termino  (53)
	exprAritmetica : exprAritmetica . '-' termino  (54)
	exprAritmetica : exprAritmetica . '+' error  (56)
	exprAritmetica : exprAritmetica . '-' error  (58)
	condicion : exprAritmetica opLogico exprAritmetica . ')'  (83)

	'+'  shift 65
	'-'  shift 66
	')'  shift 131
	.  error


state 111
	sentenciaSeleccion : BEGIN . sentencias END  (93)

	error  shift 11
	ID  shift 12
	IF  shift 13
	LOOP  shift 14
	PRINT  shift 15
	';'  shift 16
	'='  shift 17
	.  error

	sentencias  goto 132
	asignacion  goto 20
	impresion  goto 21
	sentencia  goto 22
	seleccion  goto 23
	iteracion  goto 24
	llamadaAFuncion  goto 25


state 112
	sentenciaSeleccion : sentencia .  (94)

	.  reduce 94


state 113
	seleccion : IF condicion THEN sentenciaSeleccion .  (78)
	seleccion : IF condicion THEN sentenciaSeleccion . ELSE $$4 sentenciaSeleccion  (80)

	ELSE  shift 133
	$end  reduce 78
	error  reduce 78
	ID  reduce 78
	IF  reduce 78
	END  reduce 78
	LOOP  reduce 78
	UNTIL  reduce 78
	PRINT  reduce 78
	'='  reduce 78


state 114
	iteracion : LOOP $$5 sentencias UNTIL . condicion  (96)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'('  shift 41
	.  error

	exprAritmetica  goto 42
	condicion  goto 134
	termino  goto 39
	factor  goto 40


state 115
	impresion : PRINT '(' STRING error .  (71)

	.  reduce 71


state 116
	impresion : PRINT '(' STRING ')' . ';'  (69)
	impresion : PRINT '(' STRING ')' . error  (70)

	error  shift 135
	';'  shift 136
	.  error


state 117
	bloqueFuncion : BEGIN declaracionFuncion sentenciasF . END  (12)
	bloqueFuncion : BEGIN declaracionFuncion sentenciasF . error  (15)
	sentenciasF : sentenciasF . sentenciaF  (18)

	error  shift 137
	ID  shift 88
	IF  shift 89
	END  shift 138
	LOOP  shift 90
	PRINT  shift 15
	RETURN  shift 91
	'='  shift 17
	.  error

	sentenciaF  goto 125
	asignacion  goto 95
	impresion  goto 96
	returnF  goto 97
	seleccionF  goto 98
	iteracionF  goto 99


state 118
	declaracionFuncion : IMPORT conjVariables ';' .  (17)

	.  reduce 17


state 119
	seleccionF : IF condicion . THEN sentenciaSeleccionF  (31)
	seleccionF : IF condicion . THEN sentenciaSeleccionF ELSE $$2 sentenciaSeleccionF  (33)
	seleccionF : IF condicion . sentenciaSeleccionF  (34)

	ID  shift 88
	IF  shift 89
	THEN  shift 139
	BEGIN  shift 140
	LOOP  shift 90
	PRINT  shift 15
	RETURN  shift 91
	'='  shift 17
	.  error

	sentenciaF  goto 141
	asignacion  goto 95
	impresion  goto 96
	returnF  goto 97
	seleccionF  goto 98
	iteracionF  goto 99
	sentenciaSeleccionF  goto 142


state 120
	iteracionF : LOOP UNTIL . condicion  (39)

	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'('  shift 41
	.  error

	exprAritmetica  goto 42
	condicion  goto 143
	termino  goto 39
	factor  goto 40


state 121
	iteracionF : LOOP $$3 . sentenciasF UNTIL condicion  (38)

	ID  shift 88
	IF  shift 89
	LOOP  shift 90
	PRINT  shift 15
	RETURN  shift 91
	';'  shift 92
	'='  shift 17
	.  error

	sentenciasF  goto 144
	sentenciaF  goto 94
	asignacion  goto 95
	impresion  goto 96
	returnF  goto 97
	seleccionF  goto 98
	iteracionF  goto 99


state 122
	returnF : RETURN error .  (28)

	.  reduce 28


state 123
	returnF : RETURN '(' . exprAritmetica ')'  (26)
	returnF : RETURN '(' . ')'  (27)
	returnF : RETURN '(' . error  (29)
	returnF : RETURN '(' . exprAritmetica error  (30)

	error  shift 145
	ID  shift 30
	CTEINT  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	')'  shift 146
	.  error

	exprAritmetica  goto 147
	termino  goto 39
	factor  goto 40


state 124
	bloqueFuncion : declaracionFuncion sentenciasF END .  (14)

	.  reduce 14


state 125
	sentenciasF : sentenciasF sentenciaF .  (18)

	.  reduce 18


state 126
	sentenciaF : asignacion ';' .  (21)

	.  reduce 21

